--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,7 @@
                 <br>
                 <div class="border-top">
                 <br>
-                        <p>Contact: <a href="mailto:cog@yale.edu">cog@yale.edu</a></p>
+                <p>Contact: <a href="mailto:jasmine.sahu-hough@yale.edu">jasmine.sahu-hough@yale.edu</a></p>
                 </div>
             </main>
         </div>
