made links to wiki open in new tab

--- a/templates/qr_code.html
+++ b/templates/qr_code.html
@@ -34,7 +34,7 @@
                     <ul class="navbar-nav ml-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="/qr_code">QR Code Generator</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://en.wikipedia.org/wiki/Dura-Europos">Other Resources</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://en.wikipedia.org/wiki/Dura-Europos" target="_blank">Other Resources</a></li>
                     </ul>
             </div>
         </nav>
