--- a/templates/latin_object.html
+++ b/templates/latin_object.html
@@ -36,7 +36,7 @@
                     <ul class="navbar-nav ml-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="/qr_code">QR Code Generator</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://en.wikipedia.org/wiki/Dura-Europos">Other Resources</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://en.wikipedia.org/wiki/Dura-Europos" target="_blank">Other Resources</a></li>
                     </ul>
             </div>
         </nav>
@@ -119,7 +119,7 @@
                             {% set title = page_titles[loop.index-1] %}
                             <div id="{{loop.index-1}}depicts">
                                 <h4>Depicts:</h4>
-                                    <a href="{{entry[0]}}">{{title}}</a>
+                                    <a href="{{entry[0]}}" target="_blank">{{title}}</a>
                                 <a onclick="highlight(event)" href="#{{loop.index-1}}depictspos"> 
                                     <h4>Location on Image</h4> 
                                 </a>
